# GameScriptingEngine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.py  conanfile.txt
GameScriptingEngine/: App.hpp  AutoClicker.hpp  CMakeLists.txt  Input.hpp  Window.hpp  main.cpp
GameScriptingEngine/include/: App.hpp  AutoClicker.hpp  Random.hpp  Utils.hpp  Window.hpp  sink.hpp
GameScriptingEngine/include/app/: App.hpp  AssetManager.hpp  Exceptions.hpp  GLImage.hpp  Window.hpp
GameScriptingEngine/include/app/backend/: GLImage.hpp  Window.hpp  WindowContext.hpp
GameScriptingEngine/include/app/components/: AppMode.hpp  SmoothFPSCounter.hpp  SmoothedFPSCounter.hpp
GameScriptingEngine/include/app/events/: EventListener.hpp  Events.hpp  GlobalEventBus.hpp
GameScriptingEngine/include/components/: ActionRecorder.hpp  Image.hpp  MonitorPixelReader.hpp  RectangleMarker.hpp
GameScriptingEngine/include/components/interaction/: AutoClicker.hpp  RectangleMarker.hpp  ScreenImageSaver.hpp
GameScriptingEngine/include/components/search/: TemplateMatcher.hpp
GameScriptingEngine/include/input/: Input.hpp  InputListener.hpp  Keyboard.hpp  Mouse.hpp  SendInputs.hpp
GameScriptingEngine/src/: App.cpp  AutoClicker.cpp  Random.cpp  Window.cpp
GameScriptingEngine/src/app/: App.cpp  AssetManager.cpp  EventDispatcher.cpp  GLImage.cpp  SmoothFPSCounter.cpp  Window.cpp
GameScriptingEngine/src/app/backend/: GLImage.cpp  Window.cpp  WindowContext.cpp
GameScriptingEngine/src/app/components/: AppMode.cpp  SmoothFPSCounter.cpp  SmoothedFPSCounter.cpp
GameScriptingEngine/src/app/events/: EventListener.cpp  GlobalEventDispatcher.cpp
GameScriptingEngine/src/components/: ActionRecorder.cpp  Image.cpp  MonitorPixelReader.cpp  RectangleMarker.cpp
GameScriptingEngine/src/components/ai/: ai.cpp
GameScriptingEngine/src/components/interaction/: ActionRecorder.cpp  AutoClicker.cpp  RectangleMarker.cpp  ScreenImageSaver.cpp
GameScriptingEngine/src/components/search/: TemplateMatcher.cpp
GameScriptingEngine/src/input/: Input.cpp  InputListener.cpp  Keyboard.cpp  Mouse.cpp
